--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -19,6 +19,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -30,6 +31,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -41,6 +43,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -52,6 +55,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -63,6 +67,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -74,6 +79,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -92,6 +98,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -103,6 +110,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -114,6 +122,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -125,6 +134,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -136,6 +146,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -147,6 +158,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -165,6 +177,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -176,6 +189,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -187,6 +201,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -198,6 +213,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -209,6 +225,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -220,6 +237,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -238,6 +256,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -249,6 +268,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -260,6 +280,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -271,6 +292,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -282,6 +304,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -293,6 +316,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -311,6 +335,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -322,6 +347,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -333,6 +359,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -344,10 +371,11 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/board_cell_4_4"
@@ -355,6 +383,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -366,6 +395,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -384,6 +414,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -395,6 +426,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -406,6 +438,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -417,6 +450,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -428,6 +462,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -439,6 +474,7 @@
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
             android:background="#FFFFFF"
+            android:clickable="false"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="24sp"
